src/types/tests/snapshots/tgbot__types__tests__inline_mode__answer_guest_query.snap
---
source: src/types/tests/inline_mode.rs
expression: actual_data
---
{
  "guest_query_id": "test",
  "result": {
    "caption": "caption",
    "description": "desc",
    "id": "id",
    "input_message_content": {
      "message_text": "text"
    },
    "parse_mode": "Markdown",
    "photo_file_id": "file-id",
    "reply_markup": {
      "inline_keyboard": [
        [
          {
            "text": "text",
            "url": "url"
          }
        ]
      ]
    },
    "show_caption_above_media": true,
    "title": "title",
    "type": "photo"
  }
}
