src/types/tests/snapshots/tgbot__types__tests__inline_mode__answer_inline_query-2.snap
---
source: src/types/tests/inline_mode.rs
expression: actual_data
---
{
  "button": {
    "start_parameter": "param",
    "text": "text"
  },
  "cache_time": "300",
  "inline_query_id": "id",
  "is_personal": "true",
  "next_offset": "offset",
  "results": [
    {
      "description": "desc",
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "thumbnail_height": 200,
      "thumbnail_url": "thumb-url",
      "thumbnail_width": 200,
      "title": "title",
      "type": "article",
      "url": "URL"
    },
    {
      "audio_duration": 100,
      "audio_url": "url",
      "caption": "caption",
      "id": "id",
      "input_message_content": {
        "first_name": "V",
        "last_name": "P",
        "phone_number": "+79001231212",
        "vcard": "vcard"
      },
      "performer": "performer",
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "title": "title",
      "type": "audio"
    },
    {
      "audio_file_id": "file-id",
      "caption": "test",
      "id": "id",
      "input_message_content": {
        "currency": "RUB",
        "description": "description",
        "is_flexible": true,
        "max_tip_amount": 1,
        "need_email": false,
        "need_name": true,
        "need_phone_number": true,
        "need_shipping_address": false,
        "payload": "payload",
        "photo_height": 24,
        "photo_size": 100,
        "photo_url": "https://google.com/favicon.ico",
        "photo_width": 24,
        "prices": [
          {
            "amount": 100,
            "label": "item"
          }
        ],
        "provider_data": "{\"key\":\"value\"}",
        "provider_token": "provider-token",
        "send_email_to_provider": false,
        "send_phone_number_to_provider": true,
        "suggested_tip_amounts": [
          2
        ],
        "title": "title"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "type": "audio"
    },
    {
      "first_name": "name",
      "id": "id",
      "input_message_content": {
        "heading": 90,
        "horizontal_accuracy": 1.5,
        "latitude": 1.0,
        "live_period": 100,
        "longitude": 2.0,
        "proximity_alert_radius": 100
      },
      "last_name": "last name",
      "phone_number": "phone",
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "thumbnail_height": 200,
      "thumbnail_url": "url",
      "thumbnail_width": 200,
      "type": "contact",
      "vcard": "vcard"
    },
    {
      "caption": "caption",
      "description": "desc",
      "document_url": "url",
      "id": "id",
      "input_message_content": {
        "rich_message": {
          "html": "test"
        }
      },
      "mime_type": "mime",
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "thumbnail_height": 200,
      "thumbnail_url": "thumb-url",
      "thumbnail_width": 200,
      "title": "title",
      "type": "document"
    },
    {
      "caption": "caption",
      "description": "desc",
      "document_file_id": "file-id",
      "id": "id",
      "input_message_content": {
        "link_preview_options": {
          "is_disabled": true
        },
        "message_text": "text",
        "parse_mode": "HTML"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "title": "title",
      "type": "document"
    },
    {
      "game_short_name": "name",
      "id": "id",
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "type": "game"
    },
    {
      "game_short_name": "name",
      "id": "id",
      "type": "game"
    },
    {
      "caption": "caption",
      "gif_duration": 400,
      "gif_height": 300,
      "gif_url": "url",
      "gif_width": 200,
      "id": "id",
      "input_message_content": {
        "entities": [
          {
            "length": 10,
            "offset": 0,
            "type": "bold"
          }
        ],
        "message_text": "text"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "show_caption_above_media": true,
      "thumbnail_mime_type": "video/mp4",
      "thumbnail_url": "thumb-url",
      "title": "title",
      "type": "gif"
    },
    {
      "caption": "caption",
      "gif_file_id": "file-id",
      "id": "id",
      "input_message_content": {
        "address": "addr",
        "foursquare_id": "f-id",
        "foursquare_type": "f-type",
        "google_place_id": "g-id",
        "google_place_type": "g-type",
        "latitude": 1.0,
        "longitude": 2.0,
        "title": "title"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "show_caption_above_media": true,
      "title": "title",
      "type": "gif"
    },
    {
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "latitude": 1.0,
      "live_period": 100,
      "longitude": 2.0,
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "thumbnail_height": 300,
      "thumbnail_url": "thumb-url",
      "thumbnail_width": 200,
      "title": "title",
      "type": "location"
    },
    {
      "caption": "caption",
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "mpeg4_duration": 400,
      "mpeg4_height": 300,
      "mpeg4_url": "url",
      "mpeg4_width": 200,
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "show_caption_above_media": true,
      "thumbnail_mime_type": "video/mp4",
      "thumbnail_url": "thumb-url",
      "title": "title",
      "type": "mpeg4_gif"
    },
    {
      "caption": "caption",
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "mpeg4_file_id": "file-id",
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "show_caption_above_media": true,
      "title": "title",
      "type": "mpeg4_gif"
    },
    {
      "caption": "caption",
      "description": "desc",
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "photo_height": 300,
      "photo_url": "url",
      "photo_width": 200,
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "show_caption_above_media": true,
      "thumbnail_url": "thumb-url",
      "title": "title",
      "type": "photo"
    },
    {
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "sticker_file_id": "file-id",
      "type": "sticker"
    },
    {
      "address": "addr",
      "foursquare_id": "f-id",
      "foursquare_type": "f-type",
      "google_place_id": "g-id",
      "google_place_type": "g-type",
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "latitude": 1.0,
      "longitude": 2.0,
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "thumbnail_height": 300,
      "thumbnail_url": "thumb-url",
      "thumbnail_width": 200,
      "title": "title",
      "type": "venue"
    },
    {
      "caption": "caption",
      "description": "desc",
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "mime_type": "mime",
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "show_caption_above_media": true,
      "thumbnail_url": "thumb-url",
      "title": "title",
      "type": "video",
      "video_duration": 400,
      "video_height": 300,
      "video_url": "url",
      "video_width": 200
    },
    {
      "caption": "caption",
      "description": "desc",
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "show_caption_above_media": true,
      "title": "title",
      "type": "video",
      "video_file_id": "file-id"
    },
    {
      "caption": "voice-caption",
      "id": "voice-id",
      "input_message_content": {
        "message_text": "voice-content-text"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "voice-kb-text",
              "url": "voice-kb-url"
            }
          ]
        ]
      },
      "title": "voice-title",
      "type": "voice",
      "voice_duration": 100,
      "voice_url": "voice-url"
    },
    {
      "caption": "caption",
      "id": "id",
      "input_message_content": {
        "message_text": "text"
      },
      "reply_markup": {
        "inline_keyboard": [
          [
            {
              "text": "text",
              "url": "url"
            }
          ]
        ]
      },
      "title": "title",
      "type": "voice",
      "voice_file_id": "file-id"
    }
  ]
}
