src/types/tests/snapshots/tgbot__types__tests__inline_mode__answer_inline_query.snap
---
source: src/types/tests/inline_mode.rs
expression: actual_form.into_fields()
---
[
    (
        "inline_query_id",
        FormValue::Text(
            "id",
        ),
    ),
    (
        "results",
        FormValue::Text(
            "[{\"id\":\"id\",\"type\":\"article\",\"input_message_content\":{\"message_text\":\"text\"},\"title\":\"title\"}]",
        ),
    ),
]
