src/types/tests/snapshots/tgbot__types__tests__inline_mode__answer_web_app_query.snap
---
source: src/types/tests/inline_mode.rs
expression: actual_form.into_fields()
---
[
    (
        "result",
        FormValue::Text(
            "{\"id\":\"article-id\",\"type\":\"article\",\"input_message_content\":{\"message_text\":\"article-text\"},\"title\":\"article-title\"}",
        ),
    ),
    (
        "web_app_query_id",
        FormValue::Text(
            "query-id",
        ),
    ),
]
