src/types/tests/snapshots/tgbot__types__tests__inline_mode__chosen_inline_result-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "ChosenInlineResult::new(User::new(1, \"test\", false), \"q\", \"result-id\")"
---
{
  "from": {
    "first_name": "test",
    "id": 1,
    "is_bot": false
  },
  "query": "q",
  "result_id": "result-id"
}
