src/types/tests/snapshots/tgbot__types__tests__inline_mode__chosen_inline_result.snap
---
source: src/types/tests/inline_mode.rs
expression: "ChosenInlineResult::new(User::new(1, \"test\", false), \"q\",\n\"result-id\").with_location(Location::new(2.0,\n1.0)).with_inline_message_id(\"message-id\")"
---
{
  "from": {
    "first_name": "test",
    "id": 1,
    "is_bot": false
  },
  "query": "q",
  "result_id": "result-id",
  "inline_message_id": "message-id",
  "location": {
    "latitude": 2.0,
    "longitude": 1.0
  }
}
