src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query-2.snap
---
source: src/types/tests/inline_mode.rs
expression: expected_struct
---
{
  "from": {
    "first_name": "test",
    "id": 1,
    "is_bot": false
  },
  "id": "query id",
  "offset": "query offset",
  "query": "query string"
}
