src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_article-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "input_message_content": {
    "message_text": "text"
  },
  "title": "title",
  "id": "id",
  "type": "article"
}
