src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_audio-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "audio_url": "url",
  "title": "title",
  "id": "id",
  "type": "audio"
}
